# litestar-oracledb

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  docs-preview.yaml
docs/: conf.py  fix_missing_references.py  index.rst
docs/reference/: config.rst  plugin.rst
examples/: basic.py
scripts/: build_docs.py
src/litestar_oracledb/: __init__.py  __metadata__.py  _utils.py  exceptions.py  plugin.py
src/litestar_oracledb/config/: __init__.py  _asyncio.py  _common.py  _sync.py
tests/: conftest.py  database_fixtures.py  test_plugin.py
